Introduce RemoveAction for context menu

The RemoveAction can either represent the delete action or the move to
trash action, depending on the shift modifier state.
This inplace swapping instead of adding and removing both actions fixes
a visual glitch that could be noticed by pressing and releasing the
shift key multiple times.

BUG: 438930
FIXED-IN: 5.22